# arm_logic

./: CMakeLists.txt  README.md  package.xml
launch/: README_launch_chain.txt  TD2.launch  TD3.launch  UR3_assembler.urdf.xacro  UR3_robot.urdf.xacro  UR3_robot_TEST.urdf.xacro  a_ordine.txt  erc_TEST.launch  init.launch  init_py.launch  launcher_gara.launch  logic.launch  logic_control.launch  robote.urdf.xacro  simulatione.launch
launch/da ur3_control/: init.launch  init_py.launch  launcher.launch
launch/ex_almasim/: UR3_joint_limited_robot.urdf.xacro  erc.launch  godspeed.launch  godspeede.launch  logic_control.launch  uploadee.launch
launch/objectives/: objective10.launch  objective2.launch  objective4.launch  objective7.launch  objective9.launch
scripts/: NetworkMonitor.py  StateManager.py  Test_bond.py  basic_subscriber.py  fake_controller.py  task_interface.py  task_selector.py  test_tf.py
